<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">脉度</string>
    <string name="NETWORK_ERROR">网络不给力呀，稍后试试吧！</string>
    <string name="APP_LOADING_TIP">正在努力加载数据&#8230;</string>
    <string name="APP_LOADING_FAILED">数据加载失败</string>
    <string name="APP_PAGE_RELOAD">轻触屏幕重新加载</string>
    <string name="APP_PAGE_EMPTY">这里空荡荡的</string>
    <string name="LAST_UPDATE_TIME">上次更新于：</string>
    <string name="UPDATE_TIME">更新于：</string>
    <string name="REMIND_PULL">松开可以刷新</string>
    <string name="PULL_DOWN">下拉可以刷新</string>
    <string name="REFLESHING">加载中，请稍候</string>
    <string name="REFLESH_DONE">加载完毕</string>
    <string name="LIST_LAST_PAGE">已经是最后一页啦</string>
    <string name="loading">加载中</string>
    <string name="ds_update">免费</string>
    <string name="ds_nospace">空间不足</string>
    <string name="ds_nosdcard">SD卡已拔出</string>
    <string name="dlg_ok">确定</string>
    <string name="dlg_delete">删除</string>
    <string name="dlg_cancel">取消</string>
    <string name="add_success">添加成功</string>
    <string name="file_not_found">文件不存在!</string>
    <string name="tab_home">首页</string>
    <string name="tab_hot">分类</string>
    <string name="tab_my">我的</string>
    <string name="tab_mall">商城</string>
    <string name="tab_order">订单</string>
    <string name="tab_find">找推拿师</string>
    <string name="tab_company">优惠特区</string>
    <string name="tab_reserve">现在预约</string>
    <string name="login">登录</string>
    <string name="click_login">点击登录</string>
    <string name="register">注册</string>
    <string name="register_success">首次注册成功赠送100优惠券，请去我的优惠券查看使用</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="update_pwd">修改密码</string>
    <string name="input_old_pwd">输入旧密码：</string>
    <string name="input_new_pwd2">输入新密码：</string>
    <string name="input_new_pwd_again">确认密码：</string>
    <string name="confirm_update">确认修改</string>
    <string name="get_code">获取验证码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="input_phone">请输入您的手机号码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_code">请输入6位验证码</string>
    <string name="input_pwd2">请输入您的密码</string>
    <string name="input_new_pwd">请输入您的新密码</string>
    <string name="confirm">确定</string>
    <string name="my_order">我的订单</string>
    <string name="my_address">常用地址</string>
    <string name="my_fav">我的收藏</string>
    <string name="my_coupon">优惠券</string>
    <string name="my_record">我的档案</string>
    <string name="check_version">新版本检测</string>
    <string name="about_us">关于我们</string>
    <string name="feed_back">反馈意见</string>
    <string name="share_friend">好友分享</string>
    <string name="authent">我要认证</string>
    <string name="logout">退出</string>
    <string name="jlys">经络养生</string>
    <string name="kmrs">看推拿师</string>
    <string name="health_service">养生服务</string>
    <string name="see_health_division">看养生师</string>
    <string name="input_suggestion">请输入您的宝贵意见</string>
    <string name="company_title">企业购买有月卡、年卡、季卡以及各种优惠套装等，详情请填写意向订单，客服人员会联系你</string>
    <string name="service_type">您选择的套餐服务是：</string>
    <string name="cheep_price">本次应付款：</string>
    <string name="select_company_package">请选择企业套餐</string>
    <string name="company_name">企业名称：</string>
    <string name="company_contact">联系人：</string>
    <string name="company_contact_type">联系方式：</string>
    <string name="company_address">详细地址：</string>
    <string name="company_buy_package">购买套餐：</string>
    <string name="company_package_50">50人次/月(1w)</string>
    <string name="company_package_100">100人次/月(1.8w)</string>
    <string name="company_package_300">300人次/月(5w)</string>
    <string name="company_package_500">500人次/月(8w)</string>
    <string name="company_service_item">服务项目：</string>
    <string name="company_service_item_head">头部按摩</string>
    <string name="company_service_item_body">全身放松</string>
    <string name="submit">提交</string>
    <string name="finish">完成</string>
    <string name="copy">复制</string>
    <string name="appointment_my">给自己预约</string>
    <string name="appointment_other">给他人预约</string>
    <string name="unused">未使用</string>
    <string name="failure">已失效</string>
    <string name="share_tencent">分享到腾讯微博</string>
    <string name="share_sina">分享到新浪微博</string>
    <string name="share_weixin">分享到朋友圈</string>
    <string name="share_weixin_friend">分享给好友</string>
    <string name="share_weixin_success">分享成功赠送50元代金券,请去我的优惠券查看使用</string>
    <string name="eval_good">好评</string>
    <string name="eval_nor">中评</string>
    <string name="eval_bad">差评</string>
    <string name="cancel_order">取消订单</string>
    <string name="package_1">企业0元体验</string>
    <string name="package_1_info">1、每月可使用最多50次，外加免费赠送5次\n\n2、可享受头部、肩部等全套服务项目\n\n3、可享受免费深度中医理疗按摩5次</string>
    <string name="package_service">包月套餐服务</string>
    <string name="package_2_info1">1、每月可使用最多50次，外加免费赠送5次</string>
    <string name="package_2_info2">2、可享受头部、肩部等全套服务项目</string>
    <string name="package_2_info3">3、可享受免费深度中医理疗按摩5次</string>
    <string name="package_3_info1">1、每月可使用最多50次，外加免费赠送5次</string>
    <string name="package_3_info2">2、可享受头部、肩部等全套服务项目</string>
    <string name="package_3_info3"> 3、可享受免费深度中医理疗按摩5次</string>
    <string name="package_4_info1">1、每月可使用最多50次，外加免费赠送5次</string>
    <string name="package_4_info2">2、可享受头部、肩部等全套服务项目</string>
    <string name="package_4_info3">3、可享受免费深度中医理疗按摩5次</string>
    <string name="contact_name">联系人姓名：</string>
    <string name="contact_phone">手机号码：</string>
    <string name="real_name">真实姓名：</string>
    <string name="input_real_name">请输入真实姓名</string>
    <string name="common_email">常用邮箱：</string>
    <string name="input_common_email">请输入常用邮箱</string>
    <string name="input_phone2">请输入手机号码</string>
    <string name="submit_auth">立即认证</string>
    <string name="auth_type">认证类型：</string>
    <string name="auth_item_seller">推拿师</string>
    <string name="select_seller">选推拿师</string>
    <string name="all">全部</string>
    <string name="single_project">单人项目</string>
    <string name="team">团体</string>
    <string name="high">高端</string>
    <string name="order_sale">销量排序</string>
    <string name="order_price">价格排序</string>
    <string name="select_appoint_time">请选择预约时间</string>
    <string name="select_city">已开通城市</string>
    <string name="select_location">您当前所在地址</string>
    <string name="select_address">请输入详细地址</string>
    <string name="input_detail_address">请输入详细门牌号、楼层等</string>
    <string name="appoint_type">预约类型：</string>
    <string name="next">下一步</string>
    <string name="input_contact_name">请输入联系人姓名</string>
    <string name="input_contact_phone">点击输入联系人手机号码</string>
    <string name="appointment_door_tips">所有推拿师都在忙，麻烦联系下 客服：</string>
    <!-- <string name="appointment_door_tips2">400-620-0606</string> -->
    <string name="previous">上一步</string>
    <string name="seller_name">预约技师名称：</string>
    <string name="product_name">预约产品名称：</string>
    <string name="start_time">预约的开始时间：</string>
    <string name="use_coupons">使用优惠券：</string>
    <string name="use_elect_code">使用电子券：</string>
    <string name="show_order_price">订单价格：</string>
    <string name="real_pay">实际支付：</string>
    <string name="account_left">账户余额：</string>
    <string name="use_elect_code_price">使用电子券：</string>
    <string name="select_pay_type">选择支付方式：</string>
    <string name="order_item">订单项目</string>
    <string name="input_elect_code">请输入电子券</string>
    <string name="aliay_pay_tip">支付宝客户端支付推荐已经安装支付宝客户端用户</string>
    <string name="weixin_pay_tip">银行卡支付支持储蓄卡，无需开通网银</string>
    <string name="union_pay_tip">信用卡支付支持储蓄卡，无需开通网银</string>
    <string name="order_num">订单号：</string>
    <string name="order_time">下单时间：</string>
    <string name="appoint_time">预约时间：</string>
    <string name="order_info">订单信息</string>
    <string name="product_info">产品信息</string>
    <string name="order_pay">应付金额：</string>
    <string name="order_status">订单状态：</string>
    <string name="order_pay_count">订单金额：</string>
    <string name="order_real_pay">实付金额：</string>
    <string name="order_product_name">产品名称：</string>
    <string name="order_seller_name">推拿师名称：</string>
    <string name="msg_load_ing">加载中...</string>
    <string name="loading_text">努力加载中~</string>
    <string name="empty_file_tip">亲，还没有自己的相关信息哦~</string>
    <string name="empty_file_go">赶紧去收录把</string>
    <string name="empty_order_tip">亲，您还没有相关的订单~</string>
    <string name="empty_order_go">立即去首页预约把</string>
    <string name="empty_collect_tip">亲，您还没有任何收藏哦~</string>
    <string name="empty_collect_go">快去首页逛逛把</string>
    <string name="empty_unuse_coupons_tip">亲，你没有未使用的优惠券~</string>
    <string name="empty_unfail_coupons_tip">亲，你没有已失效的优惠券~</string>
    <string name="empty_address_tip">亲，你还没有任何地址~</string>
    <string name="empty_address_go">赶紧去添加把</string>
    <string name="loading_fail_text">网络连接失败 点击重新加载</string>
    <string name="input_company_name">请输入企业名称</string>
    <string name="input_contact">请输入联系方式</string>
    <string name="input_contactor">请输入联系人</string>
    <string name="username">姓名：</string>
    <string name="pay_by_wx">通过微信支付</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="input_reqkey">输入reqkey</string>
    <string name="input_package_value">输入package value</string>
    <string name="input_sign">输入sign</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>
    <string name="app_tip">提示</string>
 <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放刷新</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">最后更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>