<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        >
	    <EditText 
	        android:layout_weight="1"
	        android:id="@+id/phone"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dip"
	        android:inputType="phone"
	        android:hint="@string/input_phone"
	        android:gravity="center"
	        />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        >
     <EditText 
        android:id="@+id/code"
        android:layout_weight="1.5"
        android:layout_margin="10dip"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:hint="@string/input_code"
        android:gravity="center"
        />
     <Button 
	        android:layout_weight="1"
	        android:id="@+id/get_code"
	        android:text="@string/get_code"
	        android:layout_width="0dip"
	        android:textSize="15sp"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:gravity="center"
	        />
     </LinearLayout>
        
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        >
     <EditText 
        android:id="@+id/password"
        android:layout_weight="1"
        android:layout_margin="10dip"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:hint="@string/input_pwd2"
        android:inputType="textPassword"
        android:gravity="center"
        />
     </LinearLayout>
    
 	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center"
        android:layout_marginTop="15dip"
        >
	    <Button 
	        android:layout_weight="1"
	        android:id="@+id/register"
	        android:text="@string/register"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:gravity="center"
	        />
    </LinearLayout>

</LinearLayout>
